# solana-certora-programs

./: .gitignore  Cargo.toml  README.md
.circleci/: ReleaseCheckAndTrigger_solana.py  config.yml
certora/: certora_build.py
certora/summaries/: cvlr_inlining_core.txt  cvlr_summaries_core.txt
cvlr_by_example/first_example/: Cargo.toml
cvlr_by_example/first_example/certora/conf/: Default.conf  MultiAssertMode.conf  expectedDefault.json  expectedMultiAssertMode.json
cvlr_by_example/first_example/src/: lib.rs
cvlr_by_example/first_example/src/certora/spec/: checks.rs
cvlr_by_example/simple_counter/: Cargo.toml
cvlr_by_example/simple_counter/certora/conf/: Default.conf
cvlr_by_example/simple_counter/client/: client.ts
cvlr_by_example/simple_counter/src/: lib.rs  processor.rs  state.rs
cvlr_by_example/simple_counter/src/certora/: spec.rs
cvlr_by_example/simple_counter_certora/: Cargo.toml
cvlr_by_example/simple_counter_certora/certora/conf/: Default.conf  expectedDefault.json
cvlr_by_example/simple_counter_certora/src/: lib.rs  processor.rs  state.rs
cvlr_by_example/simple_counter_certora/src/certora/: macros.rs  mod.rs  spec.rs
cvlr_by_example/vault_application/: Cargo.toml
cvlr_by_example/vault_application/certora/conf/: Default.conf  expectedDefault.json
cvlr_by_example/vault_application/src/: lib.rs  processor.rs  state.rs
cvlr_by_example/vault_application/src/certora/: macros.rs  mod.rs  spec.rs
