[package]
name = "first_example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
certora = []

[dependencies]
cvlr = { workspace = true }


[package.metadata.certora]
sources = [
    "Cargo.toml",
    "src/**/*.rs"
]
solana_inlining = ["../../certora/summaries/cvlr_inlining_core.txt"]
solana_summaries = ["../../certora/summaries/cvlr_summaries_core.txt"]

