[package]
name = "vault_application"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
no-entrypoint = []
certora = ["no-entrypoint"]

[dependencies]
solana-program = { workspace = true }
spl-token = { workspace = true }
spl-token-2022 = { workspace = true }
bytemuck = { workspace = true }
spl-pod = { workspace = true }

cvlr = { workspace = true }
cvlr-solana = { workspace = true }

[package.metadata.certora]
sources = [
    "Cargo.toml",
    "src/**/*.rs"
]
solana_inlining = ["../../certora/summaries/cvlr_inlining_core.txt"]
solana_summaries = ["../../certora/summaries/cvlr_summaries_core.txt"]
